business-division-api/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: "0.0.0.0"
        port_value: 8585
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: "backend"
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/channel/division-management/v1"
                route:
                  prefix_rewrite: "/business/division-management/v1"
                  cluster: divisionservice
          http_filters:
            - name: envoy.filters.http.jwt_authn
              typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
               providers:
                 keycloak-jwt:
                   issuer: "http://localhost:8180/auth/realms/diviac-realm"
#                   audiences: 
                   forward: true
                   local_jwks:
                     filename: "/etc/envoy/jwks/public_key.json"
                   from_headers:
                     - name: Authorization
                       value_prefix: "Bearer "
               rules:
                - match: {prefix: /channel/}
                  requires: {provider_name: keycloak-jwt}
            - name: envoy.filters.http.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                failure_mode_allow: false
                grpc_service:
                  google_grpc:
                    target_uri: opa-division:9191
                    stat_prefix: ext_authz
                  timeout: 0.5s
            - name: envoy.router
              typed_config: {}
  clusters:
  - name: divisionservice
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: divisionservice
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${SERVICE_NAME}
                port_value: ${SERVICE_PORT}
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: "0.0.0.0"
      port_value: 9901
